--- a/config/locales/model.ja.yml
+++ b/config/locales/model.ja.yml
@@ -7,6 +7,7 @@ ja:
       blog:
         title: "タイトル"
         content: "内容"
+        image: "画像"
       user:
         title: "タイトル"
         name: "名前"
@@ -15,3 +16,4 @@ ja:
         password: "パスワード"
         password_confirmation: "確認用パスワード"
         remember_me: "ログインを記憶"
+        image: "画像"
